--- a/style.scss
+++ b/style.scss
@@ -114,7 +114,7 @@ table {
     .cta {
         position: absolute;
         text-align: center;
-        top: 40%;
+        top: 45%;
         left: 50%;
         transform: translate(-50%,-50%);
         text-align: center;
@@ -203,6 +203,8 @@ table {
 
                 p:last-of-type {
                     margin-top: 10px;
+                    line-height: 1.5;
+                    width: 300px;
                 }
             }
 
@@ -273,9 +275,16 @@ table {
     padding: 60px;
     justify-content: space-evenly;
     align-items: center;
+    position: relative;
 
+    .planet {
+        position: absolute;
+        top: 30px;
+        right: 100px;
+        width: 175px;
+    }
+    
     .left {
-
         h1 {
             font-size: 28px;
         }
@@ -317,11 +326,19 @@ table {
     } */
 }
 
-.cards {
+#cards {
     background-color: #000031;
     color: white;
     text-align: center;
     padding: 100px;
+    position: relative;
+
+    .planet {
+        position: absolute;
+        top: 0;
+        left: -60px;
+        width: 200px;
+    }
 
     h2 {
         font-size: 28px;
@@ -353,7 +370,7 @@ table {
                     height: 100%;
                     width: 100%;
                     background: white;
-                    color: #03446A;
+                    color: black;
                     text-align: center;
                     font-size:20px;
                     border-radius: 5px;
@@ -364,7 +381,8 @@ table {
                 }
           
                 .back {
-                    background: #03446A;
+                    //background: #6949c5;
+                    background: #41249A;
                     color: white;
                     transform: rotateY( 180deg );
                 
