--- a/style.scss
+++ b/style.scss
@@ -313,7 +313,7 @@ table {
 }
 
 .game-pres {
-    height: 50vh;
+    //height: 50vh;
     background-color: #000031;
     display: flex;
     justify-content: center;
