Add team section

--- a/style.css
+++ b/style.css
@@ -352,4 +352,45 @@ table {
   transition: transform 0.4s;
 }
 
+.team {
+  background-color: #000031;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
+  padding-bottom: 100px;
+  padding-top: 50px;
+}
+.team h2 {
+  font-size: 28px;
+}
+.team .team-ctn {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly !important;
+  gap: 50px;
+  width: 80%;
+  flex-wrap: wrap;
+}
+.team .team-ctn .team-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 15px;
+}
+.team .team-ctn .team-card .img-team {
+  width: 75px;
+  height: 75px;
+  border-radius: 100%;
+}
+.team .team-ctn .team-card p:first-of-type {
+  font-weight: bold;
+}
+.team .team-ctn .team-card p:last-of-type {
+  color: rgb(191, 189, 189);
+}
+
 /*# sourceMappingURL=style.css.map */
