--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ table {
 }
 .hero-section header nav ul li:last-of-type a {
   background-color: rgb(255, 255, 255);
-  color: black;
+  color: #41249A;
   padding: 8px 35px;
   border-radius: 50px;
 }
@@ -134,7 +134,7 @@ table {
   line-height: 1.5;
 }
 .hero-section .cta a {
-  color: black;
+  color: #41249A;
   text-decoration: none;
   background-color: rgb(255, 255, 255);
   padding: 13px 45px;
@@ -183,6 +183,9 @@ table {
 }
 #planets .planets-ctn .card div p:first-of-type {
   font-weight: bold;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: #714fda;
 }
 #planets .planets-ctn .card div p:last-of-type {
   margin-top: 10px;
@@ -190,7 +193,7 @@ table {
   width: 300px;
 }
 #planets .planets-ctn .card a {
-  color: black;
+  color: #41249A;
   text-decoration: none;
   background-color: rgb(255, 255, 255);
   padding: 15px 35px;
@@ -261,10 +264,14 @@ table {
 }
 .hero-section-planet .left a {
   background-color: rgb(255, 255, 255);
-  color: black;
-  padding: 8px 35px;
+  color: #41249A;
+  padding: 13px 45px;
   border-radius: 50px;
   text-decoration: none;
+  transition: all 0.3s;
+}
+.hero-section-planet .left a:hover {
+  opacity: 0.8;
 }
 .hero-section-planet .right img {
   width: 400px;
@@ -326,7 +333,7 @@ table {
   background: white;
   color: black;
   text-align: center;
-  font-size: 20px;
+  font-size: 16px;
   border-radius: 5px;
   backface-visibility: hidden;
   display: flex;
@@ -371,7 +378,7 @@ table {
   align-items: center;
   justify-content: space-evenly !important;
   gap: 50px;
-  width: 80%;
+  width: 60%;
   flex-wrap: wrap;
 }
 .team .team-ctn .team-card {
@@ -391,6 +398,8 @@ table {
 }
 .team .team-ctn .team-card p:last-of-type {
   color: rgb(191, 189, 189);
+  max-width: 150px;
+  text-align: center;
 }
 
 /*# sourceMappingURL=style.css.map */
