--- a/style.scss
+++ b/style.scss
@@ -101,7 +101,7 @@ table {
                     &:last-of-type {
                         a{
                             background-color: rgba(255, 255, 255, 1);
-                            color: black;
+                            color: #41249A;
                             padding: 8px 35px;
                             border-radius: 50px;
                         } 
@@ -144,7 +144,7 @@ table {
         }
 
         a {
-            color: black;
+            color: #41249A;
             text-decoration: none;
             background-color: rgb(255, 255, 255);
             padding: 13px 45px;
@@ -197,8 +197,12 @@ table {
             div {
                 text-align: center;
                 margin-top: 30px;
+
                 p:first-of-type {
                     font-weight: bold;
+                    text-transform: uppercase;
+                    font-size: 20px;
+                    color: #714fda;
                 }
 
                 p:last-of-type {
@@ -209,7 +213,7 @@ table {
             }
 
             a {
-                color: black;
+                color: #41249A;
                 text-decoration: none;
                 background-color: rgb(255, 255, 255);
                 padding: 15px 35px;
@@ -298,10 +302,15 @@ table {
 
         a{
             background-color: rgba(255, 255, 255, 1);
-            color: black;
-            padding: 8px 35px;
+            color: #41249A;
+            padding: 13px 45px;
             border-radius: 50px;
             text-decoration: none;
+            transition: all 0.3s;
+
+            &:hover {
+                opacity: 0.8;
+            }
         } 
     }
 
@@ -372,7 +381,7 @@ table {
                     background: white;
                     color: black;
                     text-align: center;
-                    font-size:20px;
+                    font-size:16px;
                     border-radius: 5px;
                     backface-visibility: hidden;
                     display: flex;
@@ -426,7 +435,7 @@ table {
         align-items: center;
         justify-content: space-evenly !important;
         gap: 50px;
-        width: 80%;
+        width: 60%;
         flex-wrap: wrap;
 
         .team-card { 
@@ -448,6 +457,8 @@ table {
 
             p:last-of-type {
                 color: rgb(191, 189, 189);
+                max-width: 150px;
+                text-align: center;
             }
         }
     }
