--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ footer, header, hgroup, menu, nav, section {
 body {
   line-height: 1;
   font-family: "Poppins", sans-serif;
+  background-color: #000031;
 }
 
 h1, h2, h3 {
@@ -150,7 +151,6 @@ table {
 }
 
 #planets {
-  background-color: #000031;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -163,6 +163,7 @@ table {
 }
 #planets .planets-ctn {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
@@ -205,7 +206,6 @@ table {
 }
 
 .header {
-  background-color: #000031;
   width: 100%;
   color: white;
 }
@@ -239,13 +239,13 @@ table {
 }
 
 .hero-section-planet {
-  background-color: #000031;
   color: white;
   display: flex;
   padding: 60px;
   justify-content: space-evenly;
   align-items: center;
   position: relative;
+  flex-wrap: wrap;
 }
 .hero-section-planet .planet {
   position: absolute;
@@ -277,20 +277,7 @@ table {
   width: 400px;
 }
 
-.game-pres {
-  background-color: #000031;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  /* .video {
-      width: 900px;
-      height: 600px;
-      background-color: white;
-  } */
-}
-
 #cards {
-  background-color: #000031;
   color: white;
   text-align: center;
   padding: 100px;
@@ -359,8 +346,7 @@ table {
   transition: transform 0.4s;
 }
 
-.team {
-  background-color: #000031;
+#team {
   color: white;
   display: flex;
   flex-direction: column;
@@ -370,10 +356,10 @@ table {
   padding-bottom: 100px;
   padding-top: 50px;
 }
-.team h2 {
+#team h2 {
   font-size: 28px;
 }
-.team .team-ctn {
+#team .team-ctn {
   display: flex;
   align-items: center;
   justify-content: space-evenly !important;
@@ -381,22 +367,22 @@ table {
   width: 60%;
   flex-wrap: wrap;
 }
-.team .team-ctn .team-card {
+#team .team-ctn .team-card {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   gap: 15px;
 }
-.team .team-ctn .team-card .img-team {
+#team .team-ctn .team-card .img-team {
   width: 75px;
   height: 75px;
   border-radius: 100%;
 }
-.team .team-ctn .team-card p:first-of-type {
+#team .team-ctn .team-card p:first-of-type {
   font-weight: bold;
 }
-.team .team-ctn .team-card p:last-of-type {
+#team .team-ctn .team-card p:last-of-type {
   color: rgb(191, 189, 189);
   max-width: 150px;
   text-align: center;
