--- a/style.scss
+++ b/style.scss
@@ -171,7 +171,15 @@ table {
     align-items: center;
     padding: 100px 100px;
     gap: 100px;
+    position: relative;
     
+    .planet-homepage1 {
+        position: absolute;
+        top: 0;
+        left: -80px;
+        width: 200px;
+    }
+
     h2 {
         font-size: 28px;
         color: white;
@@ -280,7 +288,7 @@ table {
     align-items: center;
     position: relative;
     flex-wrap: wrap;
-
+    
     .planet {
         position: absolute;
         top: 30px;
@@ -409,6 +417,14 @@ table {
     gap: 100px;
     padding-bottom: 100px;
     padding-top: 50px;
+    position: relative;
+
+    .planet-homepage2 {
+        position: absolute;
+        top: 0;
+        right: -80px;
+        width: 200px;
+    }
 
     h2 {
         font-size: 28px;
