--- a/style.scss
+++ b/style.scss
@@ -422,7 +422,7 @@ table {
     .planet-homepage2 {
         position: absolute;
         top: 0;
-        right: -80px;
+        right: 0;
         width: 200px;
     }
 
